# reticle

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PERF.md  README.md  RESULT.md  cliff.toml  clippy.toml  convert_worker.js  convert_worker_bg.wasm  deny.toml  index.html  justfile  manifest.json  reticle-v6-extended-packet.md  rust-toolchain.toml  typos.toml  web-1968935bbf316c56.js  web-23f134b04998df27.js  web-2502e9f8fded47f7.js  web-27718bf38f9285b7.js  web-2b5eb620c993eb64.js  web-466ed5fe877ba93c.js  web-478c5582f71376d0.js  web-69b10274a73d1f02.js  web-7309157832549c56.js  web-8298841dabff52a3.js  web-a6ce824aff15f64.js  web-bfcee1dd54531c77.js  web-c3f057a2d57f82a0.js  web-c683261a4b92395f.js  web-cc73d6608fe18660.js  web-d5e310318aa2611e.js  web-d9e257c768201db7.js  web-db328fe1f404eeb3.js  (+2 more)
benches/: Cargo.toml
benches/history/: baseline.json
benches/src/: lib.rs
crates/reticle-agent/: Cargo.toml
crates/reticle-agent-api/: Cargo.toml
crates/reticle-agent-api/src/: apply.rs  args.rs  command.rs  error.rs  ids.rs  intent.rs  lib.rs  replay.rs  response.rs  session.rs  status.rs  transcript.rs
crates/reticle-agent-api/tests/: commands.rs  prop_commands.rs
crates/reticle-agent/examples/: agent_live_room.rs
crates/reticle-agent/src/: claude_code.rs  collab.rs  context_pack.rs  lib.rs  live.rs  main.rs  model.rs  ollama.rs  redact.rs  run.rs  vision_oracle.rs
crates/reticle-agent/tests/: agent_drc_demo.rs  collab_convergence.rs  mock_loop.rs  vision_oracle.rs
crates/reticle-app/: Cargo.toml
crates/reticle-app/assets/: NOTICE.md  theater-demo.transcript.jsonl
crates/reticle-app/benches/: pan_latency.rs
crates/reticle-app/demo-scripts/: hero-reel.demo  hero.demo  tour-3d.demo  tour-agent.demo  tour-drc.demo  tour-edit.demo  tour-generate.demo  tour-query.demo
crates/reticle-app/src/: agent_history.rs  agent_panel.rs  agent_runner.rs  app.rs  archive.rs  camera.rs  classroom.rs  command.rs  commands.rs  comment_pins.rs  culling.rs  demo.rs  dialogs.rs  diff_overlay.rs  dochost.rs  draw.rs  drc_panel.rs  dxf_dialog.rs  focus.rs  fps.rs  gallery.rs  generate_panel.rs  grid.rs  help.rs  history.rs  inspector.rs  inspector_layout.rs  keymap.rs  labels.rs  layers.rs  lib.rs  live_drc.rs  livesync.rs  main.rs  measure.rs  menu.rs  minimap.rs  netlight.rs  nl_edit.rs  notify.rs  (+37 more)
crates/reticle-app/tests/: archive_fixture.rs  corpus_open.rs  diff_overlay.rs  drc_live.rs  f1_gallery_fixture.rs  frame_guard.rs  open_silicon_library.rs  residency.rs  tapeout_example_artifact.rs  tinytapeout_validation.rs  ui_snapshots.rs
crates/reticle-bench/: Cargo.toml
crates/reticle-bench/src/: checker.rs  checkers.rs  geom_checkers.rs  leaderboard.rs  lib.rs  loader.rs  main.rs  mining.rs  model.rs  net_checkers.rs  params.rs  pcell_checkers.rs  results.rs  runner.rs  schema.rs  scripts.rs
crates/reticle-bench/tests/: generator_tasks.rs  leaderboard_deterministic.rs  new_tasks_freeze.rs  suite.rs  tier5_solvability.rs  wave3_tasks.rs  wave4_tasks.rs
crates/reticle-cli/: Cargo.toml
crates/reticle-cli/src/: convert.rs  diff.rs  lefdef_oracle.rs  lib.rs  main.rs  tt_precheck.rs
crates/reticle-cli/tests/: convert.rs  diff.rs  lefdef_oracle.rs  pipeline.rs  tt_precheck_oracle.rs
crates/reticle-demo/: Cargo.toml
crates/reticle-demo-server/: Cargo.toml
crates/reticle-demo-server/src/: config.rs  harness.rs  main.rs  relay.rs  tests_livewire.rs
crates/reticle-demo/src/: api.rs  error.rs  harness.rs  lib.rs  limits.rs  rate.rs  server.rs  share.rs  vocab.rs
crates/reticle-demo/tests/: abuse.rs
crates/reticle-diff/: Cargo.toml
crates/reticle-diff/src/: lib.rs
crates/reticle-drc/: Cargo.toml
crates/reticle-drc/benches/: incremental.rs
crates/reticle-drc/src/: geom.rs  lib.rs  lydrc.rs  sky130.rs
crates/reticle-drc/tests/: checks.rs  lydrc_engine.rs  property.rs  sky130.rs
crates/reticle-extract/: Cargo.toml
crates/reticle-extract/src/: compare.rs  connectivity.rs  device.rs  intent.rs  intent_check.rs  lib.rs  netlist.rs  query.rs  rules.rs  spice.rs  union_find.rs
crates/reticle-extract/tests/: device_compare.rs  device_extraction.rs  extraction.rs  f3_query.rs  intent_check.rs  property.rs  spice_writer.rs
crates/reticle-gen/: Cargo.toml
crates/reticle-gen/src/: error.rs  fill.rs  generator.rs  gentech.rs  gf180.rs  guard_ring.rs  lib.rs  pad_ring.rs  produce.rs  registry.rs  schema.rs  seal_ring.rs  sg13g2.rs  sky130.rs  test_structure.rs  via_farm.rs
crates/reticle-gen/tests/: f2_produce.rs  fill_teststruct_property.proptest-regressions  fill_teststruct_property.rs  gf180_drc.rs  pad_seal_property.proptest-regressions  pad_seal_property.rs  property.rs  second_pdk.proptest-regressions  second_pdk.rs  third_pdk.rs
crates/reticle-geometry/: Cargo.toml
crates/reticle-geometry/benches/: booleans.rs
crates/reticle-geometry/src/: boolean.rs  decompose.rs  lib.rs  primitives.rs  shapes.rs  traits.rs
crates/reticle-index/: Cargo.toml
crates/reticle-io/: Cargo.toml
crates/reticle-lefdef/: Cargo.toml  NOTICE.md
crates/reticle-mcp/: Cargo.toml
crates/reticle-metrology/: Cargo.toml
crates/reticle-model/: Cargo.toml
crates/reticle-plugin/: Cargo.toml
crates/reticle-proto/: Cargo.toml  build.rs
crates/reticle-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/reticle-relay-conformance/: Cargo.toml
crates/reticle-render/: Cargo.toml
desktop/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
desktop/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: gds_import.rs  gds_stream.rs  geometry_boolean.rs  oasis_import.rs  pcell_produce.rs  plugin_decode_edit.rs
worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
worker/archive/: README.md  package.json  wrangler.toml
worker/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: bundle.rs  generator.rs  main.rs  media.rs  overlay.rs  perf.rs  plugin_index.rs  tapeout.rs  ui_capture.rs  verify_licenses.rs
xtask/tests/: library_manifest.rs  plugin_index.rs
(+1372 files in other folders)
