# Reticle workspace.
#
# A browser-native, GPU-accelerated editor for very large hierarchical 2D
# IC-layout scenes. Native + WebAssembly. See docs/PLAN.md for the build plan
# and docs/decisions/ for architecture decision records.
#
# External dependencies (the Appendix A crates: i_overlay, rstar, gds21, wgpu,
# egui, yrs, prost, rhai, pathfinding, ...) are added per-wave with `cargo add`
# at resolved versions and locked in Cargo.lock, rather than guessed up front.
# See docs/decisions/0011-incremental-dependency-resolution.md.

[workspace]
resolver = "2"
members = [
    "crates/reticle-geometry",
    "crates/reticle-proto",
    "crates/reticle-index",
    "crates/reticle-io",
    "crates/reticle-model",
    "crates/reticle-render",
    "crates/reticle-drc",
    "crates/reticle-route",
    "crates/reticle-extract",
    "crates/reticle-gen",
    "crates/reticle-sync",
    "crates/reticle-server",
    "crates/reticle-relay-conformance",
    "crates/reticle-script",
    "crates/reticle-app",
    "crates/reticle-cli",
    "crates/reticle-agent-api",
    "crates/reticle-mcp",
    "crates/reticle-agent",
    "crates/reticle-bench",
    "crates/reticle-demo",
    "crates/reticle-demo-server",
    "crates/web",
    "xtask",
    "benches",
]
# MCP servers and the fuzz crate are intentionally out of the main workspace so
# they never slow the `just ci` gate. See docs/decisions/0005 and 0006.
exclude = ["tools/reticle-dev-mcp", "tools/crate-docs-mcp", "fuzz"]

[workspace.package]
version = "7.0.0"
edition = "2024"
rust-version = "1.94"
authors = ["Josef Long <Josefdean@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlpharomeroJL/reticle"
homepage = "https://github.com/AlpharomeroJL/reticle"
description = "Browser-native, GPU-accelerated editor for very large hierarchical 2D IC-layout scenes."
keywords = ["eda", "gdsii", "layout", "gpu", "cad"]
categories = ["graphics", "rendering", "science"]

[workspace.dependencies]
# Internal crates. Path-based for local builds; version set enables later publish.
reticle-geometry = { path = "crates/reticle-geometry", version = "7.0.0" }
reticle-proto = { path = "crates/reticle-proto", version = "7.0.0" }
reticle-index = { path = "crates/reticle-index", version = "7.0.0" }
reticle-io = { path = "crates/reticle-io", version = "7.0.0" }
reticle-model = { path = "crates/reticle-model", version = "7.0.0" }
reticle-render = { path = "crates/reticle-render", version = "7.0.0" }
reticle-drc = { path = "crates/reticle-drc", version = "7.0.0" }
reticle-route = { path = "crates/reticle-route", version = "7.0.0" }
reticle-extract = { path = "crates/reticle-extract", version = "7.0.0" }
reticle-gen = { path = "crates/reticle-gen", version = "7.0.0" }
reticle-sync = { path = "crates/reticle-sync", version = "7.0.0" }
reticle-server = { path = "crates/reticle-server", version = "7.0.0" }
reticle-script = { path = "crates/reticle-script", version = "7.0.0" }
reticle-app = { path = "crates/reticle-app", version = "7.0.0" }
reticle-agent-api = { path = "crates/reticle-agent-api", version = "7.0.0" }
reticle-mcp = { path = "crates/reticle-mcp", version = "7.0.0" }
reticle-agent = { path = "crates/reticle-agent", version = "7.0.0" }
reticle-bench = { path = "crates/reticle-bench", version = "7.0.0" }
reticle-demo = { path = "crates/reticle-demo", version = "7.0.0" }
reticle-demo-server = { path = "crates/reticle-demo-server", version = "7.0.0" }

# Shared external dependencies for the v5 agent, benchmark, and demo crates.
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Curated allows: pedantic lints that are noise for this domain.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Light optimization for workspace code keeps dev iteration fast while tests
# stay quick enough to gate on.
[profile.dev]
opt-level = 1

# Optimize dependencies fully in dev builds; the wgpu and yrs chains compile
# once and stay cached while workspace code iterates.
[profile.dev.package."*"]
opt-level = 3
