[package]
name = "reticle-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
reticle-geometry = { path = "../crates/reticle-geometry" }
reticle-io = { path = "../crates/reticle-io" }
reticle-model = { path = "../crates/reticle-model" }
# The sandboxed PCell producer over untrusted (script, params) input.
reticle-gen = { path = "../crates/reticle-gen" }
reticle-script = { path = "../crates/reticle-script" }
serde_json = "1.0"

[[bin]]
name = "gds_import"
path = "fuzz_targets/gds_import.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gds_stream"
path = "fuzz_targets/gds_stream.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oasis_import"
path = "fuzz_targets/oasis_import.rs"
test = false
doc = false
bench = false

[[bin]]
name = "geometry_boolean"
path = "fuzz_targets/geometry_boolean.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pcell_produce"
path = "fuzz_targets/pcell_produce.rs"
test = false
doc = false
bench = false

# cargo-fuzz builds with sanitizers; keep some debug info for useful crash reports.
[profile.release]
debug = 1
