[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reticle build automation: the deterministic layout generator, media capture, perf-check, and the worked TinyTapeout tile."
publish = false

[lints]
workspace = true

[dependencies]
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-io = { workspace = true }
reticle-render = { workspace = true }
# Feature stills reuse the app's demo document and minimap math.
reticle-app = { workspace = true }
reticle-drc = { workspace = true }
reticle-route = { workspace = true }
reticle-sync = { workspace = true }
# The `tapeout-example` subcommand (Lane 4C) drives the worked-tile build (which runs
# through the frozen agent command surface) and re-verifies transcript replay before
# writing the committed artifacts.
reticle-agent-api = { workspace = true }
# `bundle-size` gzips each dist artifact at best compression to approximate the
# on-the-wire size GitHub Pages serves; flate2 1.1.9 is already in the lock.
flate2 = "1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
# Media capture renders offscreen with reticle-render, writes PNGs with `image`,
# and assembles GIFs with the installed `gifski` CLI.
serde_json = "1.0.150"
# `perf-check` parses the committed baseline and Criterion's `estimates.json`.
