[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reticle build automation: the deterministic layout generator, media capture, perf-check, and the worked TinyTapeout tile."
publish = false

[lints]
workspace = true

[dependencies]
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-io = { workspace = true }
reticle-render = { workspace = true }
# Feature stills reuse the app's demo document and minimap math.
reticle-app = { workspace = true }
reticle-drc = { workspace = true }
reticle-route = { workspace = true }
reticle-sync = { workspace = true }
# The `tapeout-example` subcommand (Lane 4C) drives the worked-tile build (which runs
# through the frozen agent command surface) and re-verifies transcript replay before
# writing the committed artifacts.
reticle-agent-api = { workspace = true }
# `bundle-size` gzips each dist artifact at best compression to approximate the
# on-the-wire size GitHub Pages serves; flate2 1.1.9 is already in the lock.
flate2 = "1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
# Media capture renders offscreen with reticle-render, writes PNGs with `image`,
# and assembles GIFs with the installed `gifski` CLI.
serde_json = "1.0.150"
# `perf-check` parses the committed baseline and Criterion's `estimates.json`.
# --- lane pipeline-manifest: library-manifest subcommand deps ---
# `reticle-index` is consumed read-only for the F1 `GalleryManifest` types (frozen,
# ADR 0101) and to read a built `.rtla` archive's own header back (world bbox, pyramid
# levels) so the manifest's geometry is measured, never guessed.
reticle-index = { workspace = true }
serde = { workspace = true }
# Drives `reticle_index::TileSource::header`'s `async fn` from synchronous xtask code;
# same version and role as `reticle-index`'s own dev-dependency (native mmap reads
# complete immediately, so no real async runtime is needed).
pollster = "0.4.0"
# SHA-256 for the F1 manifest's `License::Verified::text_sha256` and the content-hash
# archive key. Pure Rust (RustCrypto); `digest 0.10` is already resolved in the
# lockfile via other crates, so this adds a thin, well-audited leaf.
sha2 = "0.10"
# RFC 3339 `fetched_utc` timestamps. Already in the tree transitively via `reticle-io`
# (which depends on it directly for GDS date stamping), so this is a zero-new-crate,
# version-matched addition.
chrono = "0.4.45"
# --- end lane pipeline-manifest ---
# --- lane plugin-manifest-index: plugin-index subcommand deps ---
# `reticle-plugin` supplies the F5 contract types (`Manifest`, `Index`, `IndexEntry`,
# ADR 0105) directly, so the generator emits exactly what that crate serializes: no
# hand-mirrored struct that could silently drift from the real contract. Depended on
# by path (not routed through `[workspace.dependencies]`) so this addition stays inside
# `xtask/`'s own manifest rather than touching the shared root `Cargo.toml`. xtask is a
# native-only build tool (never compiled for wasm32), so pulling in reticle-plugin's
# native-only `host` module (wasmi) here has zero bundle effect; `wasmi` is already in
# the workspace's dependency graph via `reticle-plugin` itself (ADR 0116), so this adds
# no new crate for `cargo deny` to re-evaluate.
reticle-plugin = { path = "../crates/reticle-plugin", version = "8.0.0" }
# sha2 is already a dependency above (pipeline-manifest lane); reused here for the
# plugin wasm content hash, same `sha256_hex` shape, no new crate.
# --- end lane plugin-manifest-index ---
