[package]
name = "reticle-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The interactive Reticle application: egui UI, tools, and the editing suite. Native and WASM."
keywords = ["egui", "cad", "editor", "eda", "layout"]
categories = ["gui", "graphics"]

[lib]
name = "reticle_app"
path = "src/lib.rs"

[[bin]]
name = "reticle-app"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
eframe = "0.35.0"
egui-wgpu = "0.35.0"
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-index = { workspace = true }
reticle-render = { workspace = true }
reticle-sync = { workspace = true }
reticle-drc = { workspace = true }
reticle-extract = { workspace = true }

# The agent panel and the replay theater drive the frozen agent command API
# (`Session`, `Transcript`, `AgentCommand`). `reticle-agent-api` builds for wasm32
# (its `render_png` command degrades to a clean error there rather than calling the
# native-only blocking GPU context), so the replay theater now compiles and runs on
# the web too: native reads transcripts from the filesystem and wasm plays a bundled
# transcript (see `crate::store`). Both deps are therefore unconditional.
reticle-agent-api = { workspace = true }
serde_json = { workspace = true }

# `reticle-io` supplies the technology-file parser and serializer the technology
# editor round-trips through (`parse_technology`/`write_technology`). It is already
# in the wasm graph via `reticle-agent-api`, so making it a first-class dependency
# keeps the web build green. The cross-section test also parses the committed
# SKY130 file through it.
reticle-io = { workspace = true }
