[package]
name = "reticle-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The interactive Reticle application: egui UI, tools, and the editing suite. Native and WASM."
keywords = ["egui", "cad", "editor", "eda", "layout"]
categories = ["gui", "graphics"]

[lib]
name = "reticle_app"
path = "src/lib.rs"

[[bin]]
name = "reticle-app"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
eframe = "0.35.0"
egui-wgpu = "0.35.0"
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-index = { workspace = true }
reticle-render = { workspace = true }
reticle-sync = { workspace = true }
reticle-drc = { workspace = true }
reticle-extract = { workspace = true }

# The Generate panel (`crate::generate_panel`) drives the parameterized layout
# generators: it lists them from the registry, builds a typed form from each
# generator's schema, previews the geometry live, and places it as one undo-integrated
# edit. `reticle-gen` is pure geometry (no filesystem/GPU/threads) and compiles for
# wasm32, so the panel and its live preview work in the browser too; the dependency is
# unconditional.
reticle-gen = { workspace = true }

# The agent panel and the replay theater drive the frozen agent command API
# (`Session`, `Transcript`, `AgentCommand`). `reticle-agent-api` builds for wasm32
# (its `render_png` command degrades to a clean error there rather than calling the
# native-only blocking GPU context), so the replay theater now compiles and runs on
# the web too: native reads transcripts from the filesystem and wasm plays a bundled
# transcript (see `crate::store`). Both deps are therefore unconditional.
reticle-agent-api = { workspace = true }
serde_json = { workspace = true }

# `reticle-io` supplies the technology-file parser and serializer the technology
# editor round-trips through (`parse_technology`/`write_technology`). It is already
# in the wasm graph via `reticle-agent-api`, so making it a first-class dependency
# keeps the web build green. The cross-section test also parses the committed
# SKY130 file through it.
reticle-io = { workspace = true }

# The scripted demo-capture mode (`crate::demoscript`, native only) writes
# full-window PNG frames with `image`; a windowed screenshot has no meaning on wasm,
# so the dependency is kept out of the web graph. Matches the xtask media pipeline's
# `image` build so the lockfile gains no new version.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }

# The browser open path (`crate::webopen`, wasm only) fetches a `?gds=` URL and
# persists the recent-files list in IndexedDB, so it needs the wasm-bindgen glue and
# the specific `web-sys` interfaces (fetch/Response and the IndexedDB API). These are
# already in the lockfile via `eframe`/the `web` crate, so pinning the same versions
# adds no new dependency; they build only for wasm32, keeping the native graph clean.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Response",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbRequest",
] }
