[package]
name = "reticle-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The interactive Reticle application: egui UI, tools, and the editing suite. Native and WASM."
keywords = ["egui", "cad", "editor", "eda", "layout"]
categories = ["gui", "graphics"]

[lib]
name = "reticle_app"
path = "src/lib.rs"

[[bin]]
name = "reticle-app"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
eframe = "0.35.0"
egui-wgpu = "0.35.0"
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-index = { workspace = true }
reticle-render = { workspace = true }
reticle-sync = { workspace = true }

# The streamed-document residency path (`crate::streamed`) decodes each fetched
# `.rtla` tile with the same validated `rkyv` access the mmap streaming index uses, so
# a truncated or corrupt tile errors rather than risking undefined behaviour (ADR 0062).
# Pinned to the same 0.8 already in the lockfile via `reticle-index`, so no new version
# is added; it builds for wasm32 too, keeping the browser residency path green.
rkyv = "0.8.16"
reticle-drc = { workspace = true }
reticle-extract = { workspace = true }
reticle-diff = { workspace = true }

# The Waveform Inspector section (`crate::waveform_panel`) renders F4 `WaveformSet`
# records: a shared integer time axis, per-probe integer-scaled samples, and axis
# bounds. `reticle-sim` is pure data plus a validity check (no solver yet; that is
# a separate lane's Gate-3 deliverable), so it builds for wasm32 too. First
# consumer of this workspace member (see the root manifest).
# --- lane waveform-ui: F4 waveform-record contract (ADR 0110) ---
reticle-sim = { workspace = true }
# --- end lane waveform-ui ---

# The Generate panel (`crate::generate_panel`) drives the parameterized layout
# generators: it lists them from the registry, builds a typed form from each
# generator's schema, previews the geometry live, and places it as one undo-integrated
# edit. `reticle-gen` is pure geometry (no filesystem/GPU/threads) and compiles for
# wasm32, so the panel and its live preview work in the browser too; the dependency is
# unconditional.
reticle-gen = { workspace = true }

# `reticle-script` (the rhai PCell producer) is NATIVE-ONLY -- see the
# cfg(not(wasm32)) dependencies section below (ADR 0115). Live PCell produce runs
# in the desktop app; the browser shows the predicted provenance (fixture-backed)
# rather than shipping the rhai scripting engine in the wasm bundle.

# The agent panel and the replay theater drive the frozen agent command API
# (`Session`, `Transcript`, `AgentCommand`). `reticle-agent-api` builds for wasm32
# (its `render_png` command degrades to a clean error there rather than calling the
# native-only blocking GPU context), so the replay theater now compiles and runs on
# the web too: native reads transcripts from the filesystem and wasm plays a bundled
# transcript (see `crate::store`). Both deps are therefore unconditional.
reticle-agent-api = { workspace = true }
serde_json = { workspace = true }

# The native/browser file picker (`file.open_dialog`, lane 3b). `rfd` gives one API
# over the OS dialog on native and the hidden HTML `<input type=file>` on wasm; the
# chosen bytes are then routed through the SAME hardened open path as drag-and-drop
# (classify -> LoadPlan -> the `open` seam). Default features are used: on native
# Windows it wraps the win32 dialog with no extra system libraries, and on wasm32 it
# is a thin `web-sys` shim over the file input, so the browser bundle grows only by
# that shim (see docs/design/bundle-ledger.md).
rfd = "0.17"

# `reticle-io` supplies the technology-file parser and serializer the technology
# editor round-trips through (`parse_technology`/`write_technology`). It is already
# in the wasm graph via `reticle-agent-api`, so making it a first-class dependency
# keeps the web build green. The cross-section test also parses the committed
# SKY130 file through it.
reticle-io = { workspace = true }

# The scripted demo-capture mode (`crate::demoscript`, native only) writes
# full-window PNG frames with `image`; a windowed screenshot has no meaning on wasm,
# so the dependency is kept out of the web graph. Matches the xtask media pipeline's
# `image` build so the lockfile gains no new version.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }

# The real plan/approve/execute agent (`crate::agent_runner`, native only). The web
# build keeps the model-free scripted preview: `reticle-agent`'s propose-verify-correct
# loop uses blocking `ureq` HTTP, filesystem artifact writes, and (for the live-room
# mode) `tokio`, none of which build for wasm32, so the dependency is native-only and
# the browser never claims to run a live model. `reticle-bench` supplies the `BenchTask`
# / `CheckerRegistry` / `ResultRecord` types `run_agent_task` is generic over. Both are
# in-tree workspace crates already in the lockfile, so `just deny` gains no new external
# license and the wasm bundle is unchanged.
reticle-agent = { workspace = true }
reticle-bench = { workspace = true }

# The rhai PCell producer (`reticle_script::produce`, the `f2f3-wiring` lane's live
# Regenerate) is native-only: keeping the rhai scripting engine out of the wasm
# bundle preserves the browser-native small-bundle budget (ADR 0115, measured). The
# browser PCell panel shows the predicted F2 provenance plus an honest "live produce
# runs in the desktop app" disclaimer, mirroring the native-only real agent above;
# native runs the real sandboxed produce.
reticle-script = { workspace = true }

# The browser open path (`crate::webopen`, wasm only) fetches a `?gds=` URL and
# persists the recent-files list in IndexedDB, so it needs the wasm-bindgen glue and
# the specific `web-sys` interfaces (fetch/Response and the IndexedDB API). These are
# already in the lockfile via `eframe`/the `web` crate, so pinning the same versions
# adds no new dependency; they build only for wasm32, keeping the native graph clean.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Response",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbRequest",
    # The live share transport (`crate::livesync`, wasm only) dials the relay socket
    # so a shared read-only link streams live sync and presence in the browser
    # (ADR 0058). These are the WebSocket interfaces its onopen/onmessage/onclose/
    # onerror handlers need; already in the lockfile via eframe, so no new dependency.
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Blob",
    # The settings/onboarding persistence mirror (`crate::session`, wasm only) stores
    # the session text in `window.localStorage` so preferences survive a page reload
    # (lane 4c); `Storage` is the localStorage interface. Already in the lockfile via
    # eframe, so no new dependency.
    "Storage",
] }

# `reticle-sync`'s live-session wire codec (`reticle_sync::frame`) frames and decodes
# the `SyncMessage` envelope the share transport sends and receives; it is already a
# native dependency above, but the share transport also calls it on wasm.

# The residency proof (`tests/residency.rs`) builds a `MemSource` test double that
# archives `TilePayload` tiles to bytes with `rkyv` so the streamed-fetch path decodes
# real archived bytes, exactly what a native/wasm source would serve. Same 0.8 as above.
[dev-dependencies]
rkyv = "0.8.16"

# The visual-regression suite (`tests/ui_snapshots.rs`, native only) drives the
# gallery and full-app UI through egui_kittest and diffs each frame against a
# committed PNG baseline. The wgpu backend renders the canvas-bearing app states
# on a real GPU; the harness skips honestly on adapterless hosts. Matches the
# 0.35 egui/eframe already in the graph so the lockfile gains no new egui line.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
egui_kittest = { version = "0.35", features = ["wgpu", "snapshot", "eframe"] }

# The pointer-latency pan benchmark (`benches/pan_latency.rs`, lane 3a, catalog 44)
# measures the per-frame pan-to-paint CPU work (camera pan, viewport recompute,
# streamed record selection) against a 16 ms budget, with the estimate committed to
# benches/history/baseline.json and enforced by `just perf-check`. Criterion is native
# only (benches never run on wasm); pinned to the 0.8 already in the lockfile via
# reticle-index, so no new dependency version is introduced.
criterion = "0.8.2"

[[bench]]
name = "pan_latency"
harness = false
